--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -102,11 +102,12 @@ if (XFSX_USE_LUA)
       if (NOT LUA_LIB)
         message(FATAL_ERROR "lua library not found")
       endif()
-      find_path(LUAXX_INCLUDE_DIR lua.hpp)
+      # e.g. OSX /usr/local/include/lua/
+      find_path(LUAXX_INCLUDE_DIR lua.hpp PATH_SUFFIXES lua)
       if (NOT LUAXX_INCLUDE_DIR)
         message(FATAL_ERROR "lua.hpp not found")
       endif()
-      find_path(LUA_INCLUDE_DIR lua.h)
+      find_path(LUA_INCLUDE_DIR lua.h PATH_SUFFIXES lua)
       if (NOT LUA_INCLUDE_DIR)
         message(FATAL_ERROR "lua.h not found")
       endif()
