eliminate superfluous memsets before de/encoding
BCD/Hex values using a raw vector without value initialization and
a string_view when interacting with lua via sol2.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -120,6 +120,7 @@ message("LUAXX_INCLUDE_DIR: ${LUAXX_INCLUDE_DIR}")
 
 set(LIB_SRC 
   xfsx/xfsx.cc
+  xfsx/string.cc
   xfsx/hex.cc
   xfsx/bcd.cc
   xfsx/ber2xml.cc
