Add BCD decode SIMD SSE optimized version
and rewrite the rest, e.g.:

- use more straight-forward template functions instead
  of templated functors
- also add a simple lookup version that performs surprisingly well
- introduce Catch2 for unittesting

--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "telephone-code"]
 	path = telephone-code
 	url = https://github.com/gsauthof/telephone-code.git
+[submodule "Catch2"]
+	path = Catch2
+	url = https://github.com/catchorg/Catch2.git
