Introduce buffered reading/writing such that ...
bed can be used in a pipe. First command adapted is write-id.
More to follow.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -120,6 +120,9 @@ message("LUAXX_INCLUDE_DIR: ${LUAXX_INCLUDE_DIR}")
 
 set(LIB_SRC 
   xfsx/xfsx.cc
+  xfsx/scratchpad.cc
+  xfsx/tlc_reader.cc
+  xfsx/tlc_writer.cc
   xfsx/string.cc
   xfsx/hex.cc
   xfsx/bcd.cc
