--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -103,17 +103,17 @@ if (XFSX_USE_LUA)
       set(LUA_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/lua/src)
       set(LUA_INCLUDE_DIR2 ${CMAKE_CURRENT_BINARY_DIR}/lua)
     else()
-      # some hints for Mac OSX ...
-      find_library(LUA_LIB NAMES lua)
+      # some hints for Mac OSX/Ubuntu ...
+      find_library(LUA_LIB NAMES lua lua5.3)
       if (NOT LUA_LIB)
         message(FATAL_ERROR "lua library not found")
       endif()
       # e.g. OSX /usr/local/include/lua/
-      find_path(LUAXX_INCLUDE_DIR lua.hpp PATH_SUFFIXES lua)
+      find_path(LUAXX_INCLUDE_DIR lua.hpp PATH_SUFFIXES lua lua5.3)
       if (NOT LUAXX_INCLUDE_DIR)
         message(FATAL_ERROR "lua.hpp not found")
       endif()
-      find_path(LUA_INCLUDE_DIR lua.h PATH_SUFFIXES lua)
+      find_path(LUA_INCLUDE_DIR lua.h PATH_SUFFIXES lua lua5.3)
       if (NOT LUA_INCLUDE_DIR)
         message(FATAL_ERROR "lua.h not found")
       endif()
